// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CreateAPIKey /> should render when [props.newKey] and [state.copied] set 1`] = `
<ModalDialog
  headerText="Create API Key"
  label="CreateAPI"
  onExited={[Function]}
  onHide={[MockFunction]}
  show={true}
>
  <Create__StyledDialogBody
    className="text-center"
  >
    <strong
      className="text-success"
    >
      Here is your key.
    </strong>
    <small>
      Make note of it now. For security purposes, it will not be shown again.
    </small>
    <Create__StyledFlex
      alignContent="stretch"
      alignItems="stretch"
    >
      <FlexItem
        alignSelf={null}
        basis="auto"
        grow={1}
        shrink={1}
      >
        <Input__InputContainer
          align="right"
        >
          <Input
            className="text-center"
            formGroupStyle={
              Object {
                "marginBottom": 0,
              }
            }
            readOnly={true}
            style={
              Object {
                "marginBottom": 0,
              }
            }
            value="123abc"
          />
          <CopyToClipboard
            onCopy={[Function]}
            text="123abc"
          >
            <Input__InputIcon
              name="copy"
            />
          </CopyToClipboard>
        </Input__InputContainer>
      </FlexItem>
    </Create__StyledFlex>
    <small
      className="text-primary"
    >
      <Icon
        faStyle="fas"
        fixedWidth={false}
        name="check"
      />
       Copied
    </small>
  </Create__StyledDialogBody>
</ModalDialog>
`;

exports[`<CreateAPIKey /> should render when [state.newKey] is empty 1`] = `
<ModalDialog
  headerText="Create API Key"
  label="CreateAPI"
  onExited={[Function]}
  onHide={[MockFunction]}
  show={true}
>
  <Connect(CreateAPIKeyInfo) />
  <form
    onSubmit={[Function]}
  >
    <Modal__DialogBody>
      <InputGroup>
        <Input__InputLabel>
          Name
        </Input__InputLabel>
        <Input
          label="Name"
          onChange={[Function]}
          value=""
        />
        <Input__InputError />
      </InputGroup>
      <label>
        Permissions
      </label>
      <Connect(APIPermissions)
        keyPermissions={
          Object {
            "bar": false,
            "foo": false,
          }
        }
        onChange={[Function]}
      />
    </Modal__DialogBody>
    <Modal__DialogFooter>
      <SaveButton />
    </Modal__DialogFooter>
  </form>
</ModalDialog>
`;

exports[`<CreateAPIKey /> should render when [state.newKey] set 1`] = `
<ModalDialog
  headerText="Create API Key"
  label="CreateAPI"
  onExited={[Function]}
  onHide={[MockFunction]}
  show={true}
>
  <Create__StyledDialogBody
    className="text-center"
  >
    <strong
      className="text-success"
    >
      Here is your key.
    </strong>
    <small>
      Make note of it now. For security purposes, it will not be shown again.
    </small>
    <Create__StyledFlex
      alignContent="stretch"
      alignItems="stretch"
    >
      <FlexItem
        alignSelf={null}
        basis="auto"
        grow={1}
        shrink={1}
      >
        <Input__InputContainer
          align="right"
        >
          <Input
            className="text-center"
            formGroupStyle={
              Object {
                "marginBottom": 0,
              }
            }
            readOnly={true}
            style={
              Object {
                "marginBottom": 0,
              }
            }
            value="123abc"
          />
          <CopyToClipboard
            onCopy={[Function]}
            text="123abc"
          >
            <Input__InputIcon
              name="copy"
            />
          </CopyToClipboard>
        </Input__InputContainer>
      </FlexItem>
    </Create__StyledFlex>
    <small
      className="text-primary invisible"
    >
      <Icon
        faStyle="fas"
        fixedWidth={false}
        name="check"
      />
       Copied
    </small>
  </Create__StyledDialogBody>
</ModalDialog>
`;
